# editor-go-brrr

./: Cargo.toml  README.md
src/: lib.rs
