[package]
name = "editor-go-brrr"
version = "0.1.0"
authors = ["richard wei <therichardwei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.78"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }


[lib]
# cdylib - create dynamic system lib (wasm file w/o main)
# rlib - testing w/ wasm-pack
# https://rustwasm.github.io/wasm-pack/book/tutorials/npm-browser-packages/template-deep-dive/cargo-toml.html
crate-type = ["cdylib", "rlib"]
